--- a/index.html
+++ b/index.html
@@ -16,31 +16,41 @@
 			left: 5%;
 			border: 2px solid #3252ff;
 		}
-		#info-icon {
+		#object-info{
 			position: absolute;
 			top: 5%;
-			background-color: transparent;
 			left: 5%;
-		}
-		#info-window {
-			position: absolute;
-			top: 35%;
 			background-color: black;
-			left: 50%;
 			border: 2px solid #ffffff;
 			color: white;
 			padding-left: 5px;
-			padding-top: 5px;
 			padding-right: 5px;
-			display: none;
 		}
-		#info-header{
-			padding: 10px;
-			cursor: move;
-			z-index: 10;
-			background-color: #f1f3f3;
-			color: #312818;
-		}
+		/*#info-icon {*/
+			/*position: absolute;*/
+			/*top: 5%;*/
+			/*background-color: transparent;*/
+			/*left: 5%;*/
+		/*}*/
+		/*#info-window {*/
+			/*position: absolute;*/
+			/*top: 35%;*/
+			/*background-color: black;*/
+			/*left: 50%;*/
+			/*border: 2px solid #ffffff;*/
+			/*color: white;*/
+			/*padding-left: 5px;*/
+			/*padding-top: 5px;*/
+			/*padding-right: 5px;*/
+			/*display: none;*/
+		/*}*/
+		/*#info-header{*/
+			/*padding: 10px;*/
+			/*cursor: move;*/
+			/*z-index: 10;*/
+			/*background-color: #f1f3f3;*/
+			/*color: #312818;*/
+		/*}*/
 		#detail-top {
 			background-color: black;
 			color: white;
@@ -70,18 +80,18 @@
 </head>
 <body>
 	<div id="webgl"></div>
-	<!--<div id="info-icon"> <img src="images/info3.svg" alt="Info" width="64" height="64"></div>-->
-	<!--<div id="info-window">-->
-		<!--<div id="info-header">Visualisation info <button class="close" id="info-close">Close</button></div>-->
-		<!--<div id="info-detail"></div>-->
-	<!--</div>-->
+	<div id="object-info"></div>
 
 	<div id='infobox'>
-		<div id="detail-header">Attack detail <button class="close" id="close">Close</button></div>
+		<div id="detail-header">
+			<span id="detail-head">
+				Attack detail
+			</span>
+			<button class="close" id="close">Close</button>
+		</div>
 
 		<div id="detail-top"></div>
 		<div id="detail"></div>
-
 	</div>
 
 	<script>
